--- a/test/README
+++ b/test/README
@@ -1,1 +1,8 @@
-Rlace rrds to test with here.
+#RRDs for testing generated with:
+for SRV in server{1,2,3}; do for METRIC in my_{first,second,third}_metric; do rrdtool create --start 1356822000 $SRV-$METRIC.rrd DS:$METRIC:GAUGE:1800:U:U RRA:AVERAGE:0.5:1:1200 RRA:MAX:0.5:1:1200 RRA:MIN:0.5:1:1200; done; done
+
+
+#Data added to them by:
+
+for TIME in $(seq 1356822300 300 1356897400); do for SRV in server{1,2,3}; do for METRIC in my_{first,second,third}_metric; \
+do rrdtool update $SRV-$METRIC.rrd $TIME:$RANDOM; done; done; done
